--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
     <artifactId>httpclient</artifactId>
     <version>4.1.1</version>
 </dependency>
+
+<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>19.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
