--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,42 @@
 server.port=9910
-spring.datasource.url=jdbc:postgresql://localhost:5432/budget
+spring.datasource.url=jdbc:postgresql://localhost:5432/finrms
 spring.datasource.username=postgres
 spring.datasource.password=root123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+
+
+
+spring.second.datasource.url=jdbc:oracle:thin:@10.135.44.139:1521:ctsstndy
+spring.second.datasource.username=finrms
+spring.second.datasource.password=fin#$09rms
+spring.second.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+
+
+
+
+
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=5
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=error
+
+
+
+
+
+
+
+# HikariCP settings
+# spring.datasource.hikari.*
+
+
+
+
+
